<resources>
    <string name="app_name">NHS App</string>
    <string name="symptoms">Symptoms</string>
    <string name="appointment">Appointments</string>
    <string name="prescription">Prescriptions</string>
    <string name="my_record">My record</string>
    <string name="more">More</string>
    <string name="my_account_header">My account</string>
    <string name="organ_donation_header">My organ donation decision</string>
    <string name="data_sharing_header">Find out why your data matters</string>
    <string name="admin_help_header">GP help without an appointment</string>
    <string name="data_preferences_header">Sharing health data preferences</string>
    <string name="nhs_111_header">111 Online</string>
    <string name="nhs_111_header_description">one one one Online</string>
    <string name="conditions_header">Health A-Z</string>
    <string name="conditions_header_description">Health A to Z</string>
    <string name="my_record_header">My medical record</string>
    <string name="symptoms_header">Check my symptoms</string>
    <string name="biometric_header">Login &amp; password options</string>
    <string name="appointments_header">My appointments</string>
    <string name="prescriptions_header">My repeat prescriptions</string>
    <string name="more_header">More</string>
    <string name="home_header">Home</string>
    <string name="nhs111_connection_error">NHS 111 unavailable</string>
    <string name="data_sharing_connection_error">Sharing health data unavailable</string>
    <string name="connection_error_header">Internet connection error</string>
    <string name="connection_error_title">There is a problem with your internet connection</string>
    <string name="connection_error_message">
        \nCheck your connection and try again. If the problem continues and you
        need to book an appointment or get a prescription now, contact your GP
        surgery directly. For urgent medical advice, call 111.
    </string>
    <string name="server_error_title">We\'re experiencing technical difficulties</string>
    <string name="server_error_message">
        \nTry again later. If the problem continues and you need to book an
        appointment or get a prescription now, contact your GP surgery directly.
        For urgent medical advice, call 111.
    </string>
    <string name="accessible_server_error_message">
        \nTry again later. If the problem continues and you need to book an
        appointment or get a prescription now, contact your GP surgery directly.
        For urgent medical advice, call one. one. one..
    </string>
    <string name="Accessible_connection_error_message">
        Check your connection and try again.
        \n\nIf the problem continues and you need to book an appointment or get a prescription now,
        contact your GP surgery directly. For urgent medical advice, call one one one.
    </string>
    <string name="accessible_apiUnavailableErrorMessage">
    You currently cannot use this service. If the problem continues and you need to book an appointment or
        get a prescription now, contact your GP surgery directly. For urgent medical advice, call one one one.
    </string>
    <string name="biometric_information_breadcrumb">
        <u><b>Back</b></u>
    </string>
    <string name="biometric_information_message1">
        Log in using your fingerprint
    </string>
    <string name="biometric_information_message2">
        Do this instead of using a password and security code.
    </string>
    <string name="biometric_toggle_text">Fingerprint ID</string>
    <string name="biometric_warning_header">Important</string>
    <string name="biometric_warning_message">
        All Fingerprint IDs registered on this device will be able to open your NHS account.
    </string>
    <string name="biometric_registration_header">Error</string>
    <string name="biometric_registration_failure_message">
        Something went wrong when registering for Fingerprint ID.
    </string>
    <string name="biometric_device_failure_message">
        Something went wrong when registering your fingerprint. \n\nYour device may not be compatible with the fingerprint authentication service. \n\n You may need to log in using your username and password instead.
    </string>
    <string name="service_unavailable">Service unavailable</string>
    <string name="apiUnavailableErrorMessage">You currently cannot use this service. \n\nIf the problem continues and you need to book an
        appointment or get a prescription now, contact your GP surgery directly. For urgent medical advice, call 111.
    </string>
    <string name="browser_unavailable">There\'s been a problem loading this page</string>
    <string name="browser_unavailable_message">
        This could be because your device’s settings are preventing us from opening this page.\n\nIf the problem continues and you need to book an appointment or get a prescription now, contact your GP surgery directly.
        For urgent medical advice, call 111.</string>
    <string name="accessible_browser_unavailable_message">
        This could be because your device’s settings are preventing us from opening this page.\n\nIf the problem continues and you need to book an appointment or get a prescription now, contact your GP surgery directly.
        For urgent medical advice, call 111.</string>
    <string name="download_failure_title">Sorry, something went wrong</string>
    <string name="download_failure_message">
        We could not download this file.\n\nIf the problem continues and you need to view this document now, contact your GP surgery and request it from them directly.</string>
    <string name="accessible_download_failure_message">We could not download this file.\n\nIf the problem continues and you need to view this document now, contact your GP surgery and request it from them directly.</string>
    <string name="retryButtonText">Try again</string>
    <string name="errorIconText">Error</string>
    <string name="successIconText">Success</string>
    <string name="tryLaterText">Please try again later.</string>
    <string name="nhsAppHome">NHS App Home</string>
    <string name="nhs_login_header">Log in to the NHS App</string>
    <string name="nhs_login_accessibility_label">Log in using Patient ID</string>
    <string name="log_in">Log in to NHS App</string>
    <string name="enable_fingerprint">Turn on Fingerprint ID</string>
    <string name="ok">OK</string>
    <string name="fingerprint_description_login">Touch the fingerprint sensor on your device</string>
    <string name="fingerprint_description_register">Touch the fingerprint sensor on your device</string>
    <string name="fingerprint_hint">Touch Sensor</string>
    <string name="fingerprint_not_recognized">Fingerprint not recognised. Try again</string>
    <string name="fingerprint_success">Fingerprint recognised</string>
    <string name="new_fingerprint_enrolled_description">
        A new fingerprint was added to this device, so your password is required.
    </string>
    <string name="invalid_fingerprint_dialog_header">You need to turn on fingerprint again</string>
    <string name="invalid_fingerprint_dialog_message">
        We have turned it off as something has changed.\nLog in using your email, password and security code, then turn fingerprint on in the NHS App settings.
    </string>
    <string name="fingerprint_registration_success_heading">Success</string>
    <string name="fingerprint_registration_success_dialog_message">
        You have turned on Fingerprint ID
    </string>
    <string name="fingerprint_de_registration_success_dialog_message">
        Fingerprint ID is now turned off.
    </string>
    <string name="fingerprint_success_dialog_message">
        You have turned on Fingerprint ID
    </string>
    <string name="fingerprint_success_dialog_button">Return to account settings</string>
    <string name="description_fingerprint_icon">Fingerprint icon</string>
    <string name="hardware_not_supported_header">You can\'t use Fingerprint ID on this device</string>
    <string name="hardware_not_supported_message">Fingerprint ID is not supported on this device.</string>
    <string name="version_not_supported_header">You can\'t use Fingerprint ID on this device</string>
    <string name="version_not_supported_message">You may be able to use it if you can update your operating system. Check with your operating system developer.</string>
    <string name="fingerprints_not_enabled_header">We can\'t find your fingerprint</string>
    <string name="biometrics_dialog_get_help">Get Help</string>
    <string name="fingerprints_not_enabled_message">You can get help with missing fingerprints on Android devices.</string>
    <string name="fido_auth_response">fidoAuthResponse</string>
    <string name="login_auth_code_path">/authcode</string>
    <string name="fingerprint_login_error_title">There\'s a problem</string>
    <string name="fingerprint_login_error_description">Try logging in again.</string>
    <string name="redirectErrorQueryParam">error</string>
    <string name="logoutWarning">Are you sure you want to log out?</string>
    <string name="logout">Log out</string>
    <string name="cancel">Cancel</string>
    <string name="updateRequiredTitle">Update required</string>
    <string name="updateRequiredMessage">You need to update the NHS App&lt;br/>&lt;br/>&lt;a href="market://details?id=com.nhs.online.nhsonline">Click here to update&lt;/a>&lt;br/>&lt;br/>You won\'t be able to use it until you do.</string>
    <string name="close">Close</string>
    <string name="locale_language">en</string>
    <string name="locale_region">GB</string>
    <string name="header_icon_account">My account icon</string>
    <string name="header_icon_help">Help icon</string>
    <string name="isFirstTimeOpened">isFirstTimeOpened</string>
    <string name="sessionExpiryWarningMessage"><b>For security reasons, we\'ll log you out of the NHS App in 1 minute.</b></string>
    <string name="sessionExpiryWarningStayLoggedIn">Stay logged in</string>
    <string name="sessionExpiryWarningLogOut">Log out</string>
    <string name="add_calendar_event_dialog_title">Cannot save event</string>
    <string name="add_calendar_event_dialog_message">You can try adding the event to your calendar yourself.</string>
    <string name="add_calendar_event_dialog_negative_button_text">OK</string>
    <string name="add_calendar_event_dialog_positive_button_text">Add event</string>
    <string name="leavingPageWarningHeader"><b>Leave this page?</b></string>
    <string name="leavingPageWarningMessage"><b>If you have entered any information, it will not be saved.</b></string>
    <string name="leavingPageWarningStayOnPage">Cancel</string>
    <string name="leavingPageWarningLeavePage">Leave page</string>
    <string name="frutiger45Light">FrutigerLTW01\-45Light.woff2</string>
    <string name="frutiger46LightItalic">FrutigerLTW01\-46LightItalic.woff2</string>
    <string name="frutiger55Roman">FrutigerLTW01\-55Roman.woff2</string>
    <string name="frutiger56Italic">FrutigerLTW01\-56Italic.woff2</string>
    <string name="frutiger65Bold">FrutigerLTW01\-65Bold.woff2</string>
    <string name="frutiger66BoldItalic">FrutigerLTW01\-66BoldItalic.woff2</string>
    <string name="frutiger75Black">FrutigerLTW01\-75Black.woff2</string>
    <string name="frutiger76BlackItalic">FrutigerLTW01\-76BlackItalic.woff2</string>
    <string name="frutiger95UltraBlack">FrutigerLTW01\-95UltraBlack.woff2</string>
</resources>