<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="@dimen/_12sdp"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/default_success_icon"
            android:layout_width="@dimen/_75ssp"
            android:layout_height="@dimen/_35sdp"
            android:paddingTop="@dimen/_6sdp"
            android:text="@string/successIconText"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/successTextView"
            style="@style/default_warning_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fingerprint_success_dialog_message"
            android:minHeight="@dimen/_40sdp" />

    </LinearLayout>

    <Button
        android:id="@+id/backToAccountButton"
        style="@style/blue_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/fingerprint_success_dialog_button"
        android:textAllCaps="false"
        android:focusable="true"
        android:background="@drawable/icon_drawable_blue_button_focusable"/>
</LinearLayout>

</ScrollView>