<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/_6sdp"
    android:layout_marginRight="@dimen/_6sdp">

    <LinearLayout
        android:id="@+id/top_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_centerVertical="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="left"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/_1sdp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/homeLogoIcon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:layout_gravity="center_vertical"
                android:background="@drawable/icon_drawable_boarder_focusable"

                android:contentDescription="@string/nhsAppHome"
                android:focusable="true"
                android:nextFocusDown="@id/webview"
                android:nextFocusForward="@id/helpIcon"
                android:nextFocusLeft="@id/more"
                android:nextFocusUp="@id/more"
                android:paddingTop="@dimen/_7sdp"
                android:paddingBottom="@dimen/_7sdp"
                android:src="@drawable/icon_drawable_home" />
        </LinearLayout>



        <ImageView
            android:id="@+id/nhsLogoIcon"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_height="fill_parent"
            android:adjustViewBounds="true"
            android:background="@drawable/icon_drawable_boarder_focusable"
            android:layout_centerInParent="true"
            android:contentDescription="@string/nhsApp"
            android:focusable="false"
            android:paddingTop="@dimen/_7sdp"
            android:paddingBottom="@dimen/_7sdp"
            android:paddingRight="@dimen/_4sdp"
            android:src="@drawable/icon_drawable_nhs_logo" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingRight="@dimen/_5sdp"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/helpIcon"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/_3ssp"
                android:adjustViewBounds="true"

                android:background="@drawable/icon_drawable_boarder_focusable"

                android:contentDescription="@string/header_icon_help"
                android:focusable="true"
                android:focusableInTouchMode="false"
                android:nextFocusUp="@id/more"
                android:nextFocusDown="@id/webview"
                android:nextFocusForward="@id/myAccountIcon"
                android:paddingTop="@dimen/_7sdp"
                android:paddingRight="@dimen/_10sdp"
                android:paddingBottom="@dimen/_7sdp"
                android:src="@drawable/icon_drawable_help" />

            <ImageView
                android:id="@+id/myAccountIcon"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical"
                android:adjustViewBounds="true"

                android:background="@drawable/icon_drawable_boarder_focusable"
                android:contentDescription="@string/header_icon_account"
                android:focusable="true"
                android:focusableInTouchMode="false"
                android:nextFocusUp="@id/more"
                android:paddingTop="@dimen/_7sdp"
                android:paddingBottom="@dimen/_7sdp"
                android:src="@drawable/icon_drawable_settings" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
